--- a/CleanUp Tasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
+++ b/CleanUp Tasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
@@ -1,35 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net48</TargetFramework>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1CBF7231-A95E-43A5-942E-49D3A9C99D4A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SDLCommunityCleanUpTasks</RootNamespace>
     <AssemblyName>SDLCommunityCleanUpTasks</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
     <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
@@ -63,10 +46,8 @@
     <CodeContractsCustomRewriterAssembly />
     <CodeContractsCustomRewriterClass />
     <CodeContractsLibPaths />
-    <CodeContractsExtraRewriteOptions>
-    </CodeContractsExtraRewriteOptions>
-    <CodeContractsExtraAnalysisOptions>
-    </CodeContractsExtraAnalysisOptions>
+    <CodeContractsExtraRewriteOptions></CodeContractsExtraRewriteOptions>
+    <CodeContractsExtraAnalysisOptions></CodeContractsExtraAnalysisOptions>
     <CodeContractsSQLServerOption>%28localdb%29\V11.0</CodeContractsSQLServerOption>
     <CodeContractsBaseLineFile />
     <CodeContractsCacheAnalysisResults>True</CodeContractsCacheAnalysisResults>
@@ -78,12 +59,6 @@
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
@@ -129,12 +104,7 @@
     <CodeContractsReferenceAssembly>%28none%29</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="DocumentFormat.OpenXml">
       <HintPath>$(TradosFolder)\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
@@ -169,6 +139,9 @@
     <Reference Include="Sdl.ProjectAutomation.AutomaticTasks">
       <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.AutomaticTasks.dll</HintPath>
     </Reference>
+    <Reference Include="Sdl.ProjectAutomation.Settings">
+      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Settings.dll</HintPath>
+    </Reference>
     <Reference Include="Sdl.TellMe.ProviderApi">
       <HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
     </Reference>
@@ -190,228 +163,36 @@
     <Reference Include="Sdl.ProjectAutomation.FileBased">
       <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
     </Reference>
-    <Reference Include="Sdl.ProjectAutomation.Settings">
-      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Settings.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>4.5.2</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BatchTaskMode.cs" />
-    <Compile Include="CleanUpSourceSettings.cs" />
-    <Compile Include="CleanUpSourceSettingsControl.cs">
+    <Compile Update="CleanUpSourceSettingsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CleanUpSourceSettingsControl.Designer.cs">
-      <DependentUpon>CleanUpSourceSettingsControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CleanUpSourceSettingsPage.cs" />
-    <Compile Include="CleanUpSourceTask.cs" />
-    <Compile Include="CleanUpTargetSettings.cs" />
-    <Compile Include="CleanUpTargetSettingsControl.cs">
+    <Compile Update="CleanUpTargetSettingsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CleanUpTargetSettingsControl.Designer.cs">
-      <DependentUpon>CleanUpTargetSettingsControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CleanUpTargetSettingsPage.cs" />
-    <Compile Include="CleanUpTargetSettingsPresenter.cs" />
-    <Compile Include="CleanUpTargetTask.cs" />
-    <Compile Include="Contracts\ICleanUpMessageReporterContract.cs" />
-    <Compile Include="Contracts\ICleanUpTargetSettingsContract.cs" />
-    <Compile Include="Contracts\ICleanUpTargetSettingsControlContract.cs" />
-    <Compile Include="Contracts\ISegmentHandlerContract.cs" />
-    <Compile Include="Contracts\ISegmentLockerControlContract.cs" />
-    <Compile Include="Contracts\ISegmentLockerPresenterContract.cs" />
-    <Compile Include="Contracts\ICleanUpSourceSettingsContract.cs" />
-    <Compile Include="Contracts\ISettingsContract.cs" />
-    <Compile Include="Contracts\IXmlReportGeneratorContract.cs" />
-    <Compile Include="ConversionFileViewMode.cs" />
-    <Compile Include="Dialogs\FolderDialog.cs" />
-    <Compile Include="FormattingVisitor.cs" />
-    <Compile Include="ICleanUpConversionSettings.cs" />
-    <Compile Include="Contracts\ICleanUpConversionSettingsContract.cs" />
-    <Compile Include="ICleanUpTargetSettings.cs" />
-    <Compile Include="ICleanUpTargetSettingsControl.cs" />
-    <Compile Include="ICleanUpTargetSettingsPresenter.cs" />
-    <Compile Include="Dialogs\IFolderDialog.cs" />
-    <Compile Include="ISegmentHandler.cs" />
-    <Compile Include="ISegmentLockerControl.cs" />
-    <Compile Include="ISegmentLockerPresenter.cs" />
-    <Compile Include="ISettings.cs" />
-    <Compile Include="ITagSettingsPresenter.cs" />
-    <Compile Include="IVerifyingFormattingVisitor.cs" />
-    <Compile Include="LockHandler.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="Models\ContextDef.cs" />
-    <Compile Include="Models\ConversionFile.cs" />
-    <Compile Include="ConversionFileView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ConversionFileView.Designer.cs">
-      <DependentUpon>ConversionFileView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ConversionFileViewPresenter.cs" />
-    <Compile Include="Models\ConversionItem.cs" />
-    <Compile Include="ConversionSettingsPresenter.cs" />
-    <Compile Include="ConversionsSettingsControl.cs">
+    <Compile Update="ConversionsSettingsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ConversionsSettingsControl.Designer.cs">
-      <DependentUpon>ConversionsSettingsControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\FileDialog.cs" />
-    <Compile Include="ICleanUpSourceSettings.cs" />
-    <Compile Include="IConversionFileView.cs" />
-    <Compile Include="Contracts\IConversionFileViewContract.cs" />
-    <Compile Include="IConversionFileViewPresenter.cs" />
-    <Compile Include="Contracts\IConversionFileViewPresenterContract.cs" />
-    <Compile Include="IConversionsSettingsControl.cs" />
-    <Compile Include="Contracts\IConversionsSettingsControlContract.cs" />
-    <Compile Include="IConversionsSettingsPresenter.cs" />
-    <Compile Include="Contracts\IConversionsSettingsPresenterContract.cs" />
-    <Compile Include="Dialogs\IFileDialog.cs" />
-    <Compile Include="Contracts\IFileDialogContract.cs" />
-    <Compile Include="ITagsSettingsControl.cs" />
-    <Compile Include="Contracts\ITagsSettingsControlContract.cs" />
-    <Compile Include="Models\ConversionItemList.cs" />
-    <Compile Include="Models\ReplacementText.cs" />
-    <Compile Include="Models\SearchText.cs" />
-    <Compile Include="Models\TagTable.cs" />
-    <Compile Include="Models\VbStrConvHolder.cs" />
-    <Compile Include="NonTranslatableHandler.cs" />
-    <Compile Include="PluginResources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>PluginResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\PluginProperties.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveToTargetPreProcessor.cs" />
-    <Compile Include="SegmentContentHandler.cs" />
-    <Compile Include="SegmentHandlerBase.cs" />
-    <Compile Include="SegmentLockerControl.cs">
+    <Compile Update="SegmentLockerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SegmentLockerControl.Designer.cs">
-      <DependentUpon>SegmentLockerControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Models\SegmentLockItem.cs" />
-    <Compile Include="SegmentLockerPresenter.cs" />
-    <Compile Include="SegmentProcessor.cs" />
-    <Compile Include="ConversionCleanupHandler.cs" />
-    <Compile Include="TagHandler.cs" />
-    <Compile Include="TagSettingsPresenter.cs" />
-    <Compile Include="TagsSettingsControl.cs">
+    <Compile Update="TagsSettingsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="TagsSettingsControl.Designer.cs">
-      <DependentUpon>TagsSettingsControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TargetCleanUpHandler.cs" />
-    <Compile Include="TellMe\CleanUpTasksSettingsAction.cs" />
-    <Compile Include="TellMe\CleanUpTasksSourceCodeAction.cs" />
-    <Compile Include="TellMe\CleanUpTasksDocumentationAction.cs" />
-    <Compile Include="TellMe\CleanUpTasksSupportAction.cs" />
-    <Compile Include="TellMe\CleanUpTasksTellMeProvider.cs" />
-    <Compile Include="TellMe\View\WarningSettingsView.xaml.cs">
-      <DependentUpon>WarningSettingsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Utilities\HtmlEntitizer.cs" />
-    <Compile Include="Utilities\HtmlHelper.cs" />
-    <Compile Include="Utilities\HtmlParser.cs" />
-    <Compile Include="Utilities\HtmlTag.cs" />
-    <Compile Include="Utilities\HtmlTagTable.cs" />
-    <Compile Include="Utilities\StringExtensions.cs" />
-    <Compile Include="Utilities\TextListUpdater.cs" />
-    <Compile Include="Utilities\BindableBase.cs" />
-    <Compile Include="Utilities\CleanUpMessageReporter.cs" />
-    <Compile Include="Utilities\ConversionItemDescriptionProvider.cs" />
-    <Compile Include="Utilities\ConversionItemPropertyDescriptor.cs" />
-    <Compile Include="Utilities\ConversionItemTypeDescriptor.cs" />
-    <Compile Include="Utilities\FormattingFactory.cs" />
-    <Compile Include="Utilities\ICleanUpMessageReporter.cs" />
-    <Compile Include="Models\Placeholder.cs" />
-    <Compile Include="Utilities\IXmlReportGenerator.cs" />
-    <Compile Include="Utilities\ProjectFileManager.cs" />
-    <Compile Include="Utilities\SimpleLog.cs" />
-    <Compile Include="Utilities\TextUtilities.cs" />
-    <Compile Include="Utilities\Utf8StringWriter.cs" />
-    <Compile Include="Utilities\Validator.cs" />
-    <Compile Include="Utilities\XDocumentUtility.cs" />
-    <Compile Include="Utilities\XmlReportGenerator.cs" />
-    <Compile Include="Utilities\XmlUtilities.cs" />
-    <Compile Include="Utilities\ViewFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Information.png" />
-    <None Include="Resources\TellMe_SourceCode.ico" />
-    <None Include="Resources\TellMe_Settings.ico" />
-    <None Include="Resources\TellMe_Documentation.ico" />
-    <None Include="Resources\Question.ico" />
-    <None Include="Resources\ForumIcon.ico" />
-    <None Include="Resources\TellMe1.ico" />
     <EmbeddedResource Include="CleanupSource.xsl" />
     <Content Include="broom.ico" />
-    <EmbeddedResource Include="PluginResources.resx">
-      <SubType>Designer</SubType>
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <Content Include="pluginpackage.manifest.xml">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Leo.CleanUpTasks.snk" />
-    <None Include="Properties\DataSources\ConversionItem.datasource" />
-    <None Include="Properties\DataSources\Leo.CleanUpTasks.Models.ConversionItem.datasource" />
-    <None Include="Properties\DataSources\Leo.CleanUpTasks.Models.ConversionItemList.datasource" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="CleanUpSourceSettingsControl.resx">
-      <DependentUpon>CleanUpSourceSettingsControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CleanUpTargetSettingsControl.resx">
-      <DependentUpon>CleanUpTargetSettingsControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ConversionFileView.resx">
-      <DependentUpon>ConversionFileView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ConversionsSettingsControl.resx">
-      <DependentUpon>ConversionsSettingsControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SegmentLockerControl.resx">
-      <DependentUpon>SegmentLockerControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TagsSettingsControl.resx">
-      <DependentUpon>TagsSettingsControl.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BindingListView\Sdl.Community.BindingListView.csproj">
-      <Project>{75af36a8-7797-4023-b183-5b63d448420a}</Project>
-      <Name>Sdl.Community.BindingListView</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CheckBoxComboBox\Sdl.Community.CheckBoxComboBox.csproj">
-      <Project>{70a25201-8ea4-48f8-a4a6-ed13adf8823c}</Project>
-      <Name>Sdl.Community.CheckBoxComboBox</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CheckGroupBox\Sdl.Community.CheckGroupBox.csproj">
-      <Project>{d21f9fa7-e371-4c26-a227-5e1dfd875a2b}</Project>
-      <Name>Sdl.Community.CheckGroupBox</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\BindingListView\Sdl.Community.BindingListView.csproj" />
+    <ProjectReference Include="..\CheckBoxComboBox\Sdl.Community.CheckBoxComboBox.csproj" />
+    <ProjectReference Include="..\CheckGroupBox\Sdl.Community.CheckGroupBox.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
@@ -423,12 +204,6 @@
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>18.0.1</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="TellMe\View\WarningSettingsView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
@@ -442,5 +217,4 @@
   <PropertyGroup>
     <ApplicationIcon>broom.ico</ApplicationIcon>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
