--- a/Multilingual XML FileType/Multilingual.XML.FileType/Multilingual.XML.FileType.csproj
+++ b/Multilingual XML FileType/Multilingual.XML.FileType/Multilingual.XML.FileType.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>net48</TargetFramework>
 		<TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18beta</TradosFolder>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
