Rapid Add Term 4.1.0.0: Upgrade for Studio 2024 SR1 - use Sdl.Multiterm.TMO.Interop.dll ref from MultiTerm installation folder

--- a/Rapid Add Term/RapidAddTerm/Sdl.Community.RapidAddTerm.csproj
+++ b/Rapid Add Term/RapidAddTerm/Sdl.Community.RapidAddTerm.csproj
@@ -5,6 +5,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
 		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+		<MultiTermFolder>$(MSBuildProgramFiles32)\Trados\MultiTerm\MultiTerm18</MultiTermFolder>
 		<CreatePluginPackage>true</CreatePluginPackage>
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
@@ -43,8 +44,7 @@
       <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Implementation.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.MultiTerm.TMO.Interop">
-      <HintPath>$(TradosFolder)\Sdl.MultiTerm.TMO.Interop.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>$(MultiTermFolder)\Sdl.MultiTerm.TMO.Interop.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.ProjectAutomation.Core">
       <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
