Trados Studio Target Renamer 4.1.0.1: Fix NRE

--- a/Trados Studio Target Renamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
+++ b/Trados Studio Target Renamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
@@ -80,6 +80,7 @@
 		<Reference Include="Sdl.TellMe.ProviderApi">
 			<HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
 		</Reference>
+		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
 	
   <ItemGroup>
