Add status to report messages

--- a/QATracker/QATracker/QATracker.csproj
+++ b/QATracker/QATracker/QATracker.csproj
@@ -17,6 +17,8 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>$(TradosFolder)\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="Sdl.Core.Globalization">
       <HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
     </Reference>
@@ -54,6 +56,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
 	<ItemGroup>
 	  <None Include="Properties\AssemblyInfo.cs" />
