--- a/QATracker/QATracker/QATracker.csproj
+++ b/QATracker/QATracker/QATracker.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
 		<TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18Beta</TradosFolder>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
@@ -14,7 +15,7 @@
 	  <EmbeddedResource Include="Resources\Verification.xsl" />
 	</ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
+	  <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>$(TradosFolder)\Newtonsoft.Json.dll</HintPath>
     </Reference>
