Fix(StandaloneConsoleApp): Improve Language Cloud Project Creation
- Fixed binding redirect problems that hindered project creation with Language Cloud resources.
- Refined and clarified in-code documentation within `Program.cs`.

--- a/Code samples/StandAloneConsoleApp_PretranslateUsingProvider/App.config
+++ b/Code samples/StandAloneConsoleApp_PretranslateUsingProvider/App.config
@@ -1,6 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
-    </startup>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
+	<startup useLegacyV2RuntimeActivationPolicy="true">
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+	</startup>
+	<runtime>
+		<NetFx40_PInvokeStackResilience enabled="1" />
+		<legacyCorruptedStateExceptionsPolicy enabled="true" />
+		<ThrowUnobservedTaskException enabled="true" />
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Extensions.DependencyModel" publicKeyToken="adb9793829ddae60" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Data.SqlClient" publicKeyToken="23ec7fc2d6eaa4a5" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<Paket>True</Paket>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="13.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.4" newVersion="8.0.0.4" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+
+	<log4net>
+		<!-- Set levels to DEBUG for extended logging information -->
+		<appender name="RollingFile" type="Sdl.Desktop.Logger.LocalUserAppDataFileAppender, Sdl.Desktop.Logger">
+		</appender>
+		<!-- output to debug string -->
+		<appender name="OutputDebug" type="log4net.Appender.OutputDebugStringAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+			</layout>
+		</appender>
+		<root>
+			<level value="INFO" />
+			<appender-ref ref="RollingFile" />
+			<appender-ref ref="OutputDebug" />
+		</root>
+		<logger name="Sdl.TranslationStudio">
+			<level value="INFO" />
+		</logger>
+		<logger name="Sdl.Desktop">
+			<level value="INFO" />
+		</logger>
+		<logger name="Sdl.ProjectApi">
+			<level value="INFO" />
+		</logger>
+		<logger name="Licensing">
+			<level value="INFO" />
+		</logger>
+		<!--<logger name="Sdl.MultiTerm">
+      <level value="DEBUG"/>
+    </logger>-->
+	</log4net>
 </configuration>
