Target Word Count 5.1.1.0 - Implemented a safeguard to ensure InvoiceRates are never null or empty.

--- a/Target Word Count/Sdl.Community.TargetWordCount/Sdl.Community.TargetWordCount.csproj
+++ b/Target Word Count/Sdl.Community.TargetWordCount/Sdl.Community.TargetWordCount.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\Constants.cs" />
+    <Compile Include="Helpers\DefaultInvoiceRateService.cs" />
     <Compile Include="Models\SerializableSettings.cs" />
     <Compile Include="PlainTextExtractor.cs" />
     <Compile Include="CountUnit.cs" />
