Multilingual Excel FileType 2.1.1.1 - Updated project dependencies

--- a/Multilingual Excel FileType/Multilingual.Excel.FileType/Multilingual.Excel.FileType.csproj
+++ b/Multilingual Excel FileType/Multilingual.Excel.FileType/Multilingual.Excel.FileType.csproj
@@ -13,6 +13,9 @@
 	<ItemGroup>
 		<Reference Include="Autofac">
 			<HintPath>$(TradosFolder)\Autofac.dll</HintPath>
+		</Reference> 
+		<Reference Include="Microsoft.Bcl.AsyncInterfaces">
+			<HintPath>$(TradosFolder)\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
 		</Reference>
 		<Reference Include="DocumentFormat.OpenXml">
 			<HintPath>$(TradosFolder)\DocumentFormat.OpenXml.dll</HintPath>
